<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp">


    <ImageView
        android:id="@+id/imgSubmit"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/submit_icon"
        android:src="@android:drawable/ic_menu_add" />


    <TextView
        android:id="@+id/tvFavoritesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>


    <TextView
        android:id="@+id/tvFavoritesDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_subtitle"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_gravity="center_horizontal"/>


    <Button
        android:id="@+id/btnLoginSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
