<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/etRegisterConfirmPassword"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableTint="@color/my_dark_grey"
                    android:hint="@string/register_confirm_password_text"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etRegisterPassword" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    android:backgroundTint="@color/my_light_blue"
                    android:text="@string/register_button"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etRegisterConfirmPassword" />

                <EditText
                    android:id="@+id/etRegisterPassword"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@android:drawable/editbox_background"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableTint="@color/my_dark_grey"
                    android:hint="@string/login_input_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etRegisterEmail" />

                <EditText
                    android:id="@+id/etRegisterUsername"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@android:drawable/editbox_background"
                    android:drawableStart="@drawable/ic_user_icon"
                    android:drawableTint="@color/my_dark_grey"
                    android:hint="@string/login_input_username"
                    android:padding="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <EditText
                    android:id="@+id/etRegisterEmail"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@android:drawable/editbox_background"
                    android:drawableStart="@drawable/ic_user_icon"
                    android:drawableTint="@color/my_dark_grey"
                    android:hint="@string/register_email_text"
                    android:padding="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etRegisterUsername" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/register_popup_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
